Refactor KeycloakUserSyncFilter to extract user information from token; validate user using userGuid from request